2014-11-29  Stephen Berman  <stephen.berman@gmx.net>
	    Stefan Monnier  <monnier@iro.umontreal.ca>

	* outline.el (outline-move-subtree-down): Make sure we can move
	forward to find the end of the subtree and the insertion point
	(bug#19102).

2014-11-29  Leonard Randall  <leonard.a.randall@gmail.com>

	* textmodes/reftex-parse.el (reftex-using-biblatex-p): Make search
	for comment lines non-greedy and stopping at newlines to fix stack
	overflows with large files. [Backport]

2014-11-29  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-shell-completion-setup-code): Use
	__builtin__ module (or builtins in Python 3) and catch all errors
	when importing readline and rlcompleter.

2014-11-29  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el: Handle calling revert-buffer (bug#19187).
	(todo-revert-buffer): New function.
	(todo-modes-set-1): Use it as the buffer-local value of
	revert-buffer-function.

2014-11-29  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-mode): If called interactively, just
	display a message saying to call todo-show to enter Todo mode
	(Bug#19112).

2014-11-29  Dmitry Gutov  <dgutov@yandex.ru>

	* vc/vc-hg.el (vc-hg-dir-status-files): Include ignored files.
	(Bug#18579)

	* vc/vc-bzr.el (vc-bzr-after-dir-status): Don't skip ignored
	files.  (Bug#18579)

2014-11-29  Michael Albinus  <michael.albinus@gmx.de>

	* textmodes/makeinfo.el (makeinfo-buffer): Make it work also for
	remote `buffer-file-name'.

2014-11-29  Leo Liu  <sdl.web@gmail.com>

	* calendar/diary-lib.el (calendar-mark-1): Fix thinko.

2014-11-29  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Set PYTHONUNBUFFERED on shell startup.

	* progmodes/python.el (python-shell-unbuffered): New var.
	(python-shell-calculate-process-environment): Use it.

2014-11-29  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-action-password): Clean password on subsequent